@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
 
 0.07003 2006-XX-XX XX:XX:XX
+        - Tweaks to resultset to allow inflate_result to return an array
         - Fix UTF8Columns to work under Perl <= 5.8.0
         - Fix up new_result in ResultSet to avoid alias-related bugs
         - Made new/update/find handle 'single' rel accessor correctly
